refactor(backward-sync): apply review cleanup on BackwardChain
- Collapse prependAncestorsHeader overload: alreadyStored=true was dead
  code after the batch restore path was introduced; merged into the
  single-arg method which always writes to header storage.
- Use List.getFirst()/getLast() in prependRestoredAncestorsHeaders
  instead of indexed get(0) / get(size-1).
- Replace indexed for-loop with enhanced for-each over subList.

Signed-off-by: Shridhar Panigrahi <sridharpanigrahi2006@gmail.com>